| Bug #59501 | race condition with drop tablespace and lcp | ||
|---|---|---|---|
| Submitted: | 14 Jan 2011 13:09 | Modified: | 26 Jan 2011 11:26 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Disk Data | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[14 Jan 2011 13:09]
Jonas Oreland
[14 Jan 2011 13:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128746 3377 Jonas Oreland 2011-01-14 ndb - bug#59501 - don't remove tablespace/datafile object while END_LCP is running
[14 Jan 2011 13:16]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.40 (revid:jonas@mysql.com-20110114131512-tv44pdevs5wtakeo) (version source revid:jonas@mysql.com-20110114131000-oj8rnf4zwldqal6u) (merge vers: 5.1.51-ndb-6.3.40) (pib:24)
[15 Jan 2011 6:28]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.21 (revid:jonas@mysql.com-20110115062918-ymo4dgn62dzli9ny) (version source revid:jonas@mysql.com-20110115062918-ymo4dgn62dzli9ny) (merge vers: 5.1.51-ndb-7.0.21) (pib:24)
[15 Jan 2011 7:49]
Jonas Oreland
also pushed to 7.1.10
[26 Jan 2011 11:26]
Jon Stephens
Documented bugfix in the NDB-7.1.10 and 7.1.21 changelogs, as follows:
A race condition could sometimes be created when DROP TABLESPACE
was run concurrently with a local checkpoint; this could in turn
lead to a crash of the data node.
Closed.
