ndb - bug#59501 - don't remove tablespace/datafile object while END_LCP is running