storage/ndb/src/kernel/blocks/tsman.cpp
@@ -437,6 +437,13 @@ Tsman::execDROP_FILEGROUP_REQ(Signal* signal){
       ptr.p->m_state = Tablespace::TS_DROPPING;
       break;
     case DropFilegroupImplReq::Commit:
+      if (ptr.p->m_ref_count)
+      {
+        jam();
+        sendSignalWithDelay(reference(), GSN_DROP_FILEGROUP_REQ, signal,
+                            100, signal->getLength());
+        return;
+      }
       m_tablespace_list.remove(ptr);
       m_tablespace_hash.release(ptr);
       break;
@@ -1411,6 +1418,14 @@ Tsman::execDROP_FILE_REQ(Signal* signal)
     }
     case DropFileImplReq::Commit:
       ndbrequire(find_file_by_id(file_ptr, fg_ptr.p->m_meta_files, req.file_id));
+      if (file_ptr.p->m_ref_count)
+      {
+        jam();
+        sendSignalWithDelay(reference(), GSN_DROP_FILE_REQ, signal,
+                            100, signal->getLength());
+        return;
+      }
+      
       file_ptr.p->m_create.m_extent_pages = 
 	file_ptr.p->m_online.m_offset_data_pages - 1;
       file_ptr.p->m_create.m_senderRef = req.senderRef;
@@ -1462,7 +1477,8 @@ Tsman::Tablespace::Tablespace(Tsman* ts, Lgman* lg,
 {
   m_tablespace_id = req->filegroup_id;
   m_version = req->filegroup_version;
-  
+  m_ref_count = 0;
+
   m_extent_size = DIV(req->tablespace.extent_size, File_formats::NDB_PAGE_SIZE);
 #if defined VM_TRACE || defined ERROR_INSERT
   ndbout << "DD tsman: ts id:" << m_tablespace_id << " extent pages/bytes:" << m_extent_size << "/" << m_extent_size*File_formats::NDB_PAGE_SIZE  << endl;
@@ -1476,6 +1492,7 @@ Tsman::Datafile::Datafile(const struct CreateFileImplReq* req)
   m_file_no = RNIL;
   m_fd = RNIL;
   m_online.m_first_free_extent = RNIL;
+  m_ref_count = 0;
     
   m_create.m_senderRef = req->senderRef; // During META
   m_create.m_senderData = req->senderData; // During META
@@ -2047,8 +2064,10 @@ Tsman::execEND_LCP_REQ(Signal* signal)
    * Move extents from "lcp" free list to real free list
    */
   Ptr<Tablespace> ptr;
-  if(m_tablespace_list.first(ptr))
+  if (m_tablespace_list.first(ptr))
   {
+    jam();
+    ptr.p->m_ref_count ++;
     signal->theData[0] = TsmanContinueB::END_LCP;
     signal->theData[1] = ptr.i;
     signal->theData[2] = 0;    // free
@@ -2062,6 +2081,8 @@ Tsman::end_lcp(Signal* signal, Uint32 ptrI, Uint32 list, Uint32 filePtrI)
 {
   Ptr<Tablespace> ptr;
   m_tablespace_list.getPtr(ptr, ptrI);
+  ndbrequire(ptr.p->m_ref_count);
+  ptr.p->m_ref_count--;
   
   Ptr<Datafile> file;
   file.i = filePtrI;
@@ -2082,6 +2103,8 @@ Tsman::end_lcp(Signal* signal, Uint32 ptrI, Uint32 list, Uint32 filePtrI)
     else
     {
       tmp.getPtr(file);
+      ndbrequire(file.p->m_ref_count);
+      file.p->m_ref_count--;
     }
     break;
   }
@@ -2101,6 +2124,8 @@ Tsman::end_lcp(Signal* signal, Uint32 ptrI, Uint32 list, Uint32 filePtrI)
     else
     {
       tmp.getPtr(file);
+      ndbrequire(file.p->m_ref_count);
+      file.p->m_ref_count--;
     }
     break;
   }
@@ -2183,10 +2208,19 @@ Tsman::end_lcp(Signal* signal, Uint32 ptrI, Uint32 list, Uint32 filePtrI)
       m_tablespace_list.next(ptr);
     }
   }
+  else
+  {
+    jam();
+    ndbrequire(ptr.i != RNIL);
+    m_file_pool.getPtr(file);
+    file.p->m_ref_count++;
+  }
   
 next:
   if(ptr.i != RNIL)
   {
+    ptr.p->m_ref_count++;
+    
     signal->theData[0] = TsmanContinueB::END_LCP;
     signal->theData[1] = ptr.i;
     signal->theData[2] = list;    
